--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME='News API'
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:TxjLD+o/XsQ9Tb7XurAE40Ik7ngkDU2JarNb+36OUn8=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -20,12 +20,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=news_api
+DB_USERNAME=root
+DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -63,3 +63,8 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+AUTH_GUARD="api"
+
+# **** API KEYS ****
+THE_GUARDIAN_API_KEY="027ae82a-3184-4177-8085-0bc6d0384d8e"
+NY_TIMES_API_KEY="SCNYMGVJX0Pxz8U8oQiMeS4PYuS59Ptr "
