Open News added, some bug fixes, Cache added, rate limiter added, Open API Documentation added

--- a/.env.example
+++ b/.env.example
@@ -27,7 +27,7 @@ DB_DATABASE=news_api
 DB_USERNAME=root
 DB_PASSWORD=
 
-SESSION_DRIVER=database
+SESSION_DRIVER=file
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
@@ -37,7 +37,7 @@ BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
 
-CACHE_STORE=database
+CACHE_STORE=file
 # CACHE_PREFIX=
 
 MEMCACHED_HOST=127.0.0.1
@@ -67,4 +67,5 @@ AUTH_GUARD="api"
 
 # **** API KEYS ****
 THE_GUARDIAN_API_KEY="027ae82a-3184-4177-8085-0bc6d0384d8e"
-NY_TIMES_API_KEY="SCNYMGVJX0Pxz8U8oQiMeS4PYuS59Ptr "
+NY_TIMES_API_KEY="SCNYMGVJX0Pxz8U8oQiMeS4PYuS59Ptr"
+NEWS_API_KEY="6269dc6a712449a193d0e446031406bc"
