--- a/.env.example
+++ b/.env.example
@@ -24,8 +24,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=news_api
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=news_api
+DB_PASSWORD=news_api
 
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
@@ -68,4 +68,4 @@ AUTH_GUARD="api"
 # **** API KEYS ****
 THE_GUARDIAN_API_KEY="027ae82a-3184-4177-8085-0bc6d0384d8e"
 NY_TIMES_API_KEY="SCNYMGVJX0Pxz8U8oQiMeS4PYuS59Ptr"
-NEWS_API_KEY="6269dc6a712449a193d0e446031406bc"
+OPEN_NEWS_API_KEY="6269dc6a712449a193d0e446031406bc"
